[package]
name = "bt"
version = "0.3.1"
edition = "2021"
description = "Brian's Tasks - a minimal, file-based task tracker"
license = "Apache-2.0"
repository = "https://github.com/brianm/bt"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
thiserror = "1"
glob = "0.3"
rand = "0.8"
serde_json = "1.0.145"

[package.metadata.release]
publish = false
