[package]
name = "yatl"
version = "0.5.0"
edition = "2021"
description = "Yet Another Task List - a minimal, file-based task tracker"
license = "Apache-2.0"
repository = "https://github.com/brianm/yatl"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
thiserror = "1"
glob = "0.3"
rand = "0.8"
serde_json = "1.0.145"
terminal_size = "0.4"
unicode-width = "0.2"

[package.metadata.release]
publish = false
